sumo/tests/sumo/extended/emitter/errors/routedist/missing_id/errors.sumo
Error: MSTriggeredSource emitter: No route id given.
Quitting (on error).
